--- a/source/scss/_fonts.scss
+++ b/source/scss/_fonts.scss
@@ -1,31 +1,39 @@
 @font-face {
-	font-family: 'oswald';
-	src: url('../fonts/oswald_regular.eot');
-	src: local('☺'), url('../fonts/oswald_regular.woff') format('woff'), url('../fonts/oswald_regular.ttf') format('truetype'), url('../fonts/oswald_regular.svg') format('svg');
+	font-family: "oswald";
+	src: url("../fonts/oswald_regular.eot");
+	src: local("☺"), url("../fonts/oswald_regular.woff") format("woff"),
+		url("../fonts/oswald_regular.ttf") format("truetype"),
+		url("../fonts/oswald_regular.svg") format("svg");
 	font-weight: 400;
 	font-style: normal;
 }
 
 @font-face {
-	font-family: 'montserrat';
-	src: url('../fonts/montserrat_medium.eot');
-	src: local('☺'), url('../fonts/montserrat_medium.woff') format('woff'), url('../fonts/montserrat_medium.ttf') format('truetype'), url('../fonts/montserrat_medium.svg') format('svg');
+	font-family: "montserrat";
+	src: url("../fonts/montserrat_medium.eot");
+	src: local("☺"), url("../fonts/montserrat_medium.woff") format("woff"),
+		url("../fonts/montserrat_medium.ttf") format("truetype"),
+		url("../fonts/montserrat_medium.svg") format("svg");
 	font-weight: 500;
 	font-style: normal;
 }
 
 @font-face {
-	font-family: 'montserrat';
-	src: url('../fonts/montserrat_semibold.eot');
-	src: local('☺'), url('../fonts/montserrat_semibold.woff') format('woff'), url('../fonts/montserrat_semibold.ttf') format('truetype'), url('../fonts/montserrat_semibold.svg') format('svg');
+	font-family: "montserrat";
+	src: url("../fonts/montserrat_semibold.eot");
+	src: local("☺"), url("../fonts/montserrat_semibold.woff") format("woff"),
+		url("../fonts/montserrat_semibold.ttf") format("truetype"),
+		url("../fonts/montserrat_semibold.svg") format("svg");
 	font-weight: 600;
 	font-style: normal;
 }
 
 @font-face {
-	font-family: 'montserrat';
-	src: url('../fonts/montserrat__bold.eot');
-	src: local('☺'), url('../fonts/montserrat__bold.woff') format('woff'), url('../fonts/montserrat__bold.ttf') format('truetype'), url('../fonts/montserrat__bold.svg') format('svg');
+	font-family: "montserrat";
+	src: url("../fonts/montserrat__bold.eot");
+	src: local("☺"), url("../fonts/montserrat__bold.woff") format("woff"),
+		url("../fonts/montserrat__bold.ttf") format("truetype"),
+		url("../fonts/montserrat__bold.svg") format("svg");
 	font-weight: 700;
 	font-style: normal;
 }
