--- a/source/scss/_global.scss
+++ b/source/scss/_global.scss
@@ -13,12 +13,13 @@ body {
    flex: 1 0 auto;
 }
 
-.footer {
+footer {
    flex: 0 0 auto;
 }
 
 .container {
    max-width: 1500px;
    margin: 0 auto;
-   padding: 0 15px; 
+   padding: 0 15px;
+   position: relative;
 }
