--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -1181,12 +1181,16 @@ body {
 	}
 
 	.what {
+		padding: 15px 0 0 0;
 		.item__wrapper:last-of-type {
 			margin-bottom: 0px;
 		}
 		overflow: hidden;
 		&__title {
 			font-size: 18px;
+		}
+		&__title {
+			margin: 0 0 20px 0;
 		}
 		.item {
 			width: 280px;
