--- a/css/style.css
+++ b/css/style.css
@@ -226,6 +226,7 @@ footer {
 }
 
 .mobile__popup .mobile__logo {
+  fill: #181c81;
   margin: 54px 0;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -260,7 +261,7 @@ footer {
 }
 
 .mobile__popup .mobile__bottom {
-  margin-bottom: 100px;
+  margin-bottom: 140px;
 }
 
 .mobile__popup .mobile__number {
@@ -434,7 +435,7 @@ footer {
 }
 
 .popup__btn {
-  margin: 0px 0 16px 0;
+  margin: 40px 0 16px 0;
   cursor: pointer;
 }
 
@@ -619,7 +620,7 @@ footer {
   .popup .button {
     font-size: 28px;
     padding: 14.5px 26px;
-    margin: 0px 0 16px 0;
+    margin: 10px 0 16px 0;
   }
   .popup__container {
     width: 500px;
@@ -1851,13 +1852,12 @@ body {
     height: 19px;
   }
   .solutions {
-    max-height: 660px;
     background-size: 60%;
   }
   .solutions__text {
     font-size: 24px;
     min-width: 275px;
-    width: 275px;
+    width: 300px;
   }
   .what {
     padding: 15px 0 0 0;
@@ -1942,6 +1942,9 @@ body {
   .quote__text {
     font-size: 24px;
   }
+  .how .how {
+    padding: 70px 0;
+  }
   .how__title {
     font-size: 18px;
     line-height: 24px;
@@ -1966,6 +1969,12 @@ body {
     font-size: 12px;
     line-height: 18px;
     margin: 16px 0 4px 0;
+  }
+  .footer .top {
+    padding: 60px 0 60px 0;
+  }
+  .footer .top__title {
+    margin: 0px 0px 0 0;
   }
   .footer .top .form input {
     padding: 19px 16px;
@@ -2037,5 +2046,11 @@ body {
   .footer .bot__tg svg {
     width: 24px;
     height: 24px;
+  }
+}
+
+@media screen and (max-width: 576px) and (min-height: 700px) {
+  .solutions {
+    background-size: 100%;
   }
 }
