--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -12,70 +12,6 @@ body {
 	overflow-x: hidden;
 	width: 100vw;
 }
-// .mobile__popup::-webkit-scrollbar {
-// 	display: none;
-// }
-// .mobile__popup {
-// 	overflow: auto;
-// 	position: absolute;
-// 	transition: 0.4s;
-// 	top: 0;
-// 	height: 0px;
-// 	left: 0;
-// 	bottom: 0;
-// 	z-index: 99999;
-// 	right: 0;
-// 	background-color: white;
-// 	.container {
-// 		display: flex;
-// 		flex-direction: column;
-// 		height: 100%;
-// 	}
-// 	.button {
-// 		font-weight: 600;
-// 		font-size: 18px;
-// 		line-height: 130%;
-// 	}
-
-// 	.mobile__logo {
-// 		margin: 54px 0;
-// 		display: flex;
-// 		align-items: center;
-// 		justify-content: space-between;
-// 	}
-// 	.mobile__links {
-// 		flex-grow: 1;
-// 		display: flex;
-// 		flex-direction: column;
-// 		font-weight: bold;
-// 		font-size: 20px;
-// 		line-height: 140%;
-// 		color: #000356;
-// 		span {
-// 			margin-bottom: 20px;
-// 		}
-// 	}
-// 	.mobile__bottom {
-// 		margin-bottom: 100px;
-// 	}
-// 	.mobile__number {
-// 		font-weight: 600;
-// 		font-size: 18px;
-// 		line-height: 140%;
-// 		margin-bottom: 26px;
-// 	}
-// 	.mobile__row {
-// 		display: flex;
-// 		justify-content: space-between;
-// 	}
-// 	.mobile__lang {
-// 		font-weight: 500;
-// 		font-size: 14px;
-// 		line-height: 140%;
-// 		color: #454ada;
-// 		align-self: center;
-// 	}
-// }
 
 .header {
 	padding: 100px 0 0 0;
@@ -133,178 +69,7 @@ body {
 		letter-spacing: 0.03em;
 		border-radius: 180px;
 	}
-
-	// @keyframes fadeInOpacity {
-	// 	0% {
-	// 		opacity: 0;
-	// 	}
-	// 	100% {
-	// 		opacity: 1;
-	// 	}
-	// }
-	// @keyframes fadeInScale {
-	// 	0% {
-	// 		transform: scale(0);
-	// 	}
-	// 	100% {
-	// 		transform: scale(1);
-	// 	}
-	// }
-	// .popup {
-	// 	transition: opacity 0.3s;
-	// 	opacity: 1;
-	// 	animation-name: fadeInOpacity;
-	// 	animation-iteration-count: 1;
-	// 	animation-timing-function: ease-in;
-	// 	animation-duration: 0.3s;
-	// 	z-index: 999999;
-	// 	position: fixed;
-	// 	top: 0;
-	// 	left: 0;
-	// 	height: 100vh;
-	// 	overflow-y: hidden;
-	// 	width: 100%;
-	// 	background-color: rgba(0, 0, 0, 0.3);
-	// 	display: flex;
-	// 	justify-content: center;
-	// 	align-items: center;
-
-	// 	&__container {
-	// 		transition: 0.3s;
-	// 		animation-name: fadeInScale;
-	// 		animation-iteration-count: 1;
-	// 		animation-timing-function: ease-in;
-	// 		animation-duration: 0.2s;
-	// 		background: #b7c7fd;
-	// 		width: 800px;
-	// 		border-radius: 18px;
-	// 		display: flex;
-	// 		flex-direction: column;
-	// 		align-items: center;
-	// 		padding: 81px 0;
-	// 	}
-	// 	&__text {
-	// 		font-style: normal;
-	// 		font-weight: bold;
-	// 		font-size: 42px;
-	// 		line-height: 140%;
-	// 		margin-bottom: 62px;
-	// 		cursor: default;
-	// 	}
-	// 	&__input {
-	// 		width: 500px;
-	// 		margin: 0 0 28px 0;
-	// 	}
-	// 	input {
-	// 		padding: 41px 46px;
-	// 		width: 100%;
-	// 		height: 20px;
-	// 		border-radius: 18px;
-	// 		font-weight: 500;
-	// 		font-size: 28px;
-	// 		line-height: 140%;
-	// 		display: flex;
-	// 		flex-direction: column;
-	// 	}
-	// 	&__phone {
-	// 		display: flex;
-	// 		span {
-	// 			padding: 0 8px 0 20px;
-	// 			background-color: white;
-	// 			border-radius: 18px 0px 0px 18px;
-	// 			font-weight: 500;
-	// 			font-size: 28px;
-	// 			line-height: 140%;
-	// 			display: flex;
-	// 			justify-content: center;
-	// 			align-items: center;
-	// 		}
-	// 	}
-	// 	label {
-	// 		font-weight: 500;
-	// 		font-size: 28px;
-	// 		line-height: 170%;
-	// 	}
-	// 	&__warning {
-	// 		display: none;
-	// 		height: 27px;
-	// 		font-weight: 600;
-	// 		font-size: 20px;
-	// 		color: #ed2222;
-	// 		line-height: 130%;
-	// 	}
-	// 	&__error {
-	// 		position: relative;
-	// 		top: -68px;
-	// 		left: 62%;
-	// 		display: none;
-	// 	}
-	// 	&__btn {
-	// 		margin: 0px 0 16px 0;
-	// 		cursor: pointer;
-	// 	}
-	// 	&__close {
-	// 		font-size: 33px;
-	// 		color: grey;
-	// 		font-weight: 900;
-	// 		position: fixed;
-	// 		top: 8px;
-	// 		right: 16px;
-	// 		cursor: pointer;
-	// 	}
-	// }
-	// .success {
-	// 	display: none;
-	// 	z-index: 99999;
-	// 	position: fixed;
-	// 	top: 0;
-	// 	left: 0;
-	// 	height: 100vh;
-	// 	overflow-y: hidden;
-	// 	width: 100%;
-	// 	background-color: rgba(0, 0, 0, 0.3);
-	// 	justify-content: center;
-	// 	align-items: center;
-	// 	&__message {
-	// 		background-color: #b7c7fd;
-	// 		border-radius: 18px;
-	// 		padding: 100px 110px;
-	// 		display: flex;
-	// 		flex-direction: column;
-	// 		justify-content: center;
-	// 		align-items: center;
-	// 	}
-	// 	&__text {
-	// 		text-align: center;
-	// 		width: 580px;
-	// 		font-size: 34px;
-	// 		line-height: 140%;
-	// 	}
-	// 	.button {
-	// 		margin-top: 34px;
-	// 	}
-	// 	.close {
-	// 		font-size: 33px;
-	// 		color: grey;
-	// 		font-weight: 900;
-	// 		position: fixed;
-	// 		top: 8px;
-	// 		right: 16px;
-	// 		cursor: pointer;
-	// 	}
-	// }
 }
-// .warning .popup__warning {
-// 	display: inline-block;
-// 	margin-top: 8px;
-// }
-// .warning .popup__error {
-// 	display: inline-block;
-// }
-// .warning input,
-// .warning span {
-// 	border: 2px solid red;
-// }
 
 .solutions {
 	background: url("../img/main.png") no-repeat;
@@ -659,6 +424,9 @@ body {
 				font-weight: 500;
 				font-size: 28px;
 				line-height: 140%;
+			}
+			.popup__warning {
+				margin-top: 16px;
 			}
 			.button {
 				width: fit-content;
@@ -1288,6 +1056,7 @@ body {
 			line-height: 18px;
 			margin: 16px 0 4px 0;
 		}
+
 		.top {
 			padding: 46px 0 46px 0;
 		}
@@ -1362,7 +1131,7 @@ body {
 		}
 	}
 }
-@media screen and (max-width: 576px) and (min-height: 700px) {
+@media screen and (max-width: 576px) and (min-height: 568px) {
 	.solutions {
 		background-size: 100%;
 	}
