--- a/css/notfound.css
+++ b/css/notfound.css
@@ -553,6 +553,8 @@ h6 {
 }
 
 .conditions {
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
