--- a/css/style.css
+++ b/css/style.css
@@ -588,6 +588,8 @@ footer {
 }
 
 .conditions {
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -2004,6 +2006,11 @@ body {
         -ms-flex-direction: column;
             flex-direction: column;
     font-size: 10px;
+  }
+  .footer .conditions__year {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
   }
   .footer .button {
     font-size: 14px;
