--- a/css/terms.css
+++ b/css/terms.css
@@ -588,6 +588,8 @@ footer {
 }
 
 .conditions {
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
