--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -405,7 +405,7 @@ body {
 		&__pic {
 			position: absolute;
 			left: -8%;
-			bottom: -59%;
+			bottom: -50%;
 		}
 		.form {
 			label {
@@ -454,8 +454,11 @@ body {
 	}
 
 	.bot {
+		height: 400px;
+		.conditions {
+			margin: 20px 0 0 0;
+		}
 		padding: 80px 0 60px 360px;
-		height: 470px;
 		position: relative;
 		&__inner {
 			max-width: 1200px;
@@ -465,18 +468,18 @@ body {
 			max-width: 1140px;
 			display: flex;
 			justify-content: space-evenly;
-			align-items: center;
+			align-items: flex-start;
 		}
 
 		&__col {
-			padding: 42px 0 0 0;
-			margin: 0 65px 0 0;
+			// padding: 42px 0 0 0;
+			// margin: 0 65px 0 0;
 			display: flex;
 			flex-direction: column;
 			justify-content: space-between;
 		}
 		&__logo {
-			margin: 0 0 50px 0;
+			margin: 0 0 42px 0;
 		}
 
 		&__title {
@@ -484,10 +487,11 @@ body {
 			font-size: 24px;
 			line-height: 34px;
 			font-weight: 500;
+			margin-bottom: 24px;
 		}
 
 		&__email {
-			margin: 32px 0 10px 0;
+			// margin: 32px 0 10px 0;
 			color: #000356;
 			font-size: 24px;
 			line-height: 34px;
@@ -504,6 +508,15 @@ body {
 			color: #000356;
 		}
 
+		&__icons {
+			margin-bottom: 40px;
+			a {
+				margin-right: 20px;
+			}
+			svg {
+				fill: #454ada;
+			}
+		}
 		&__tg {
 			margin: 32px;
 			fill: #454ada;
@@ -515,7 +528,7 @@ body {
 			}
 		}
 		&__col_lang {
-			padding: 42px 0 0 0;
+			// padding: 42px 0 0 0;
 			display: flex;
 			align-items: flex-end;
 			align-self: flex-start;
@@ -702,7 +715,15 @@ body {
 		}
 		.bot {
 			padding: 80px 0 70px 240px;
-			height: 410px;
+			height: 380px;
+			&__icons {
+				a {
+					margin-right: 12px;
+				}
+				svg {
+					width: 32px;
+				}
+			}
 		}
 		.bot__terms {
 			font-size: 16px;
@@ -903,8 +924,9 @@ body {
 			flex-direction: column;
 		}
 		.bot {
-			padding: 50px 0 58px 40px;
-			height: 325px;
+			padding: 50px 10px 58px 10px;
+			// height: fit-content;
+			height: 285px;
 		}
 		.bot__lang-ua,
 		.bot__lang-ru {
@@ -1099,10 +1121,18 @@ body {
 			font-size: 12px;
 			font-weight: 600;
 			line-height: 18px;
+			margin-bottom: 14px;
 		}
 		.bot {
-			padding: 50px 0 20px 28px;
-			height: 215px;
+			padding: 30px 5px 0 5px;
+			height: 220px;
+		}
+		.bot__icons {
+			margin-bottom: 14px;
+			svg {
+				width: 27px;
+				height: 27px;
+			}
 		}
 		.bot__row {
 			align-items: flex-start;
@@ -1115,14 +1145,13 @@ body {
 			display: none;
 		}
 		.bot__logo {
-			margin: 0 0 22px 0;
+			margin: 0 0 16px 0;
 		}
 		.logo__sign {
 			width: 134px;
 		}
 		.bot__email {
 			font-size: 10px;
-			margin: 7px 0 7px 0;
 			line-height: 18px;
 		}
 		.bot__contacts {
