--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ button::-moz-focus-inner {
 a,
 a:visited {
   text-decoration: none;
-  color: #000356;
+  color: inherit;
 }
 
 a:hover {
@@ -597,6 +597,10 @@ footer {
   font-weight: 500;
   font-size: 22px;
   line-height: 140%;
+}
+
+.conditions a:visited {
+  color: #5a5a5a;
 }
 
 .conditions__year {
