--- a/source/scss/_nullstyle.scss
+++ b/source/scss/_nullstyle.scss
@@ -56,7 +56,7 @@ button::-moz-focus-inner {
 a,
 a:visited {
 	text-decoration: none;
-	color: #000356;
+	color: inherit;
 }
 a:hover {
 	text-decoration: none;
