button hover color changed

--- a/source/scss/_base.scss
+++ b/source/scss/_base.scss
@@ -266,7 +266,7 @@
 	text-transform: uppercase;
 	border-radius: 87px;
 	&:hover {
-		background-color: #6581be;
+		background-color: #000356;
 	}
 	&:active {
 		background-color: #000356;
